<resources>
    <!-- Não alterar nome do arquivo (se não da erro) -->
    <string name="app_name">App Camp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- SingUp Strings -->
    <!---->
    <string name="error_text">Email e/ou senha incorretos.</string>
    <string name="singUp">Cadastro</string>
    <string name="user_sing_up_string">Como posso te chamar?*</string>
    <string name="email_sing_up_string">Qual é o seu email?</string>
    <string name="password_sing_up_string">Escolha uma senha forte</string>
    <string name="confirm_password_sing_up_string">Confirme sua senha</string>
    <string name="radio_group_text">Você se identifica como:</string>
    <string name="first_option_sing_up_string">Mulher Trans</string>
    <string name="second_option_sing_up_string">Homem Trans</string>
    <string name="third_option_sing_up_string">Pessoa Trans Não Binária</string>
    <string name="fourth_option_sing_up_string">Outra Identidade</string>
    <string name="user_messenger_string">Nome pelo qual você se identifica*</string>
    <string name="sing_up_button_string">Cadastrar</string>
    <string name="others_option_sing_up_string">Qual é a sua identidade de gênero</string>
    <string name="error_email_sing_up_string">Formato de email inválido</string>
    <string name="error_password_string">As senhas precisam ser iguais</string>
    <string name="terms_of_use_sing_up_string">Ao se casdastrar você concorda com nossos</string>
    <string name="required_genre_field_string">Campo obrigatório</string>

    <!-- Login Strings -->
    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="login_btn_text">Entrar</string>
    <string name="question_text">Ainda não tem uma conta?</string>
    <string name="signup_link">Cadastre-se!</string>
    <string name="email_text">farias.fabianam@gmail.com</string>
    <string name="password_text">***************</string>
    <string name="cpf_string">Digite seu CPF</string>

    <!-- Search Strings-->
    <string name="search_text">Pesquisa</string>
    <string name="search_city_hint">Cidade (opcional)</string>
    <string name="search_name_hint">Nome (opcional)</string>
    <string name="specialty_subtitle_text">Especialidade</string>
    <string name="localization_subtitle_text">Localização</string>
    <string name="gender_subtitle_text">Gênero</string>
    <string name="psychologist_chip_text">Psicologia</string>

    <!-- List Fragment Strings-->
    <string name="disconnect_string">Sair</string>
    <string name="list_title_string">Profissionais de saúde</string>
    <string name="all_options_string">Todas</string>
    <string name="psychiatrist_string">Psiquiatria</string>
    <string name="gynecologist_string">Ginecologia</string>
    <string name="urologist_string">Urologia</string>
    <string name="endocrinology_string">Endocrinologia</string>
    <string name="psychology_string">Psicologia</string>
    <string name="explain_search_string">Use o botão Pesquisar para encontrar profissionais que se cadastraram com o compromisso de tratar (bem) pacientes trans.</string>
    <string name="search_string">Pesquisar</string>
    <string name="contact_string">Contato</string>
    <string name="text_input_hint_menu_localization_state">UF-Estado</string>
    <string name="text_input_hint_menu_localization_city">Cidade</string>
    <string name="text_input_hint_menu_gender">Identidade de gênero</string>
    <string name="text_view_hint_filter_menu">Qualquer</string>
    <string name="search_text_btn">Pesquisar</string>
    <string name="see_profile_string">Ver Perfil</string>
    <string name="results">Resultados</string>
    <string name="user_name">Bruna</string>
    <string name="logoutBtn_text">Sair</string>
    <string name="search_for_name">Busca por nome</string>
    <string name="cisgender_women_string">Mulher Cis</string>
    <string name="trans_women_string">Mulher Trans</string>
    <string name="cisgender_men_string">Homem Cis</string>
    <string name="trans_men_string">Homem Trans</string>
    <string name="non_binary_person_string">Gênero Não Binário</string>
    <string name="filter_string">Filtrar</string>
    <string name="empty_list_response1_string">Infelizmente ainda não temos resultados para esses critérios ou localização.</string>
    <string name="empty_list_response2_string">Estamos trabalhando para que cada vez mais profissionais estejam disponíveis na plataforma.</string>
    <string name="empty_list_response3_string">Enquanto isso, que tal tentar uma nova pesquisa? Obrigado pela paciência!</string>

    <string name="professional_first_name">Silvia</string>
    <string name="professional_last_name">Maranhão</string>
    <string name="treatment_pronoun">Drª.</string>
    <string name="specialty_title">Endocrinologista</string>
    <string name="crm_crp">CRM:09/222222</string>
    <string name="attendance_title">Atendimento</string>
    <string name="experience_title">Experiência com pacientes trans</string>
    <string name="formation_title">Currículo e formação</string>
    <string name="contact_title">Contato</string>
    <string name="meetTypeText">Online e Presencial</string>
    <string name="priceText">R$ 100,00</string>
    <string name="locationText">Fortaleza-CE</string>
    <string name="addressText">Avenida Brasil, 644, Centro, Sala 266</string>
    <string name="health_insurance">Atende convênio</string>
    <string name="inclusive_bathroom">Banheiro inclusivo</string>
    <string name="experience_multitext">Atendo pessoas trans em transição hormonal desde 2012.
        Tenho ampla experiência no assunto e atuo em todos os estágios do procedimento, das primeiras consultas,
        passando por todo o início da terapia hormonal até. Atendo pessoas trans em transição hormonal desde 2012.
        Tenho ampla experiência no assunto e atuo em todos os estágios do procedimento, das primeiras consultas,
        passando por todo o início da terapia hormonal até.</string>
    <string name="formation_multitext">Atendo pessoas trans em transição hormonal desde 2012. Tenho ampla experiência
        no assunto e atuo em todos os estágios do procedimento, das primeiras consultas,
        passando por todo o início da terapia hormonal até. Atendo pessoas trans em transição hormonal desde 2012.
        Tenho ampla experiência no assunto e atuo em todos os estágios do procedimento, das primeiras consultas,
        passando por todo o início da terapia hormonal até.</string>
    <string name="telephone_item_text">(31) 3258-9999</string>
    <string name="whatsapp_item_text">(31) 99999-9999</string>
    <string name="email_item_text">silvia@mail.com.br</string>
    <string name="linkedin_item_text">Linkedin</string>
    <string name="read_more">Leia mais</string>
    <string name="about_title">Sobre</string>
    <string name="about_subtitle">Fale conosco</string>
    <string name="about_text"><span><b>DiverSaúde</b></span> é uma iniciativa criada para conectar pessoas trans aos profissionais da saúde interessados(as) em oferecer um tratamento digno, diminuindo a violência sofrida por essas pessoas.
O aplicativo segue em desenvolvimento e contará com mais funcionalidades no futuro, pensando sempre em facilitar o acesso à saúde para a comunidade trans e não binária.</string>
    <string name="fale_conosco_text">Tem alguma dúvida ou feedback?\n fale conosco pelo email\n <span><b>contato@diversaude.com.br</b></span></string>
    <string name="trans_health_title">Saúde Trans</string>
    <string name="trans_health_introduction">Confira abaixo algumas respostas para perguntas frequentes sobre saúde.</string>
    <string name="trans_health_question_1"><b>Estou passando por um momento de crise e falta de esperança, o que devo fazer?</b> </string>
    <string name="trans_health_question_2"><b>O que fazer em caso de preconceito e discriminação em um atendimento médico ou psicológico?</b></string>
    <string name="trans_health_question_3"><b>Qual é o papel de cada profissional da saúde e como eles(as) podem ajudar?</b> </string>
    <string name="trans_health_question_4"><b>Quais são os riscos do uso de hormônios sem supervisão médica?
Ler mais</b></string>
    <string name="do_login_string">Faça login</string>
    <string name="yes_string">Sim</string>
    <string name="no_string">Não</string>

    <string name="title_dialog_string">Sair do app</string>
    <string name="subtitle_dialog_string">Gostaria de encerrar sua sessão?\nSelecionando “Sim” você retornará à\ntela de login.</string>

    <!-- Onboard -->
    <string name="onboard_title1">Oi! Que bom te ver aqui! 😉</string>
    <string name="onboard_title2">Já conhece nossa missão?</string>
    <string name="onboard_title3">Então vamos começar!</string>
    <string name="onboard_text1">Estamos reunindo no DiverSaúde profissionais de saúde que respeitam a comunidade trans e as suas diversas identidades. </string>
    <string name="question_login_text">Já tem uma conta?</string>
    <string name="login_link_text">Faça login</string>
    <string name="question_login">Já tem uma conta?</string>
</resources>