<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginTop="69dp"
        android:layout_marginStart="108dp"
        android:layout_marginEnd="108dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logotransapp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLoginLabel"
        style="@style/Login_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="139dp"
        android:layout_marginEnd="142dp"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login_title" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textFieldEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvLoginLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="0dp"
        android:hint="@string/email_hint"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textFieldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/textFieldEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="0dp"
        android:hint="@string/password_hint"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldEditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:inputType="textPassword"
            android:singleLine="true"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/ErrorTextAppearance"
        android:id="@+id/txtError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_text"
        android:textSize="14sp"
        android:visibility="visible"
        android:drawableStart="@drawable/ic_baseline_warning_amber"
        app:layout_constraintStart_toStartOf="@id/textFieldPassword"
        app:layout_constraintTop_toBottomOf="@id/textFieldPassword" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mbLogin"
        style="@style/Login_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="52dp"
        android:text="@string/login_btn_text"
        android:textAllCaps="false"
        android:background="@drawable/button_state_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldPassword"
        app:cornerRadius="8dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/SignupQuestion"
        style="@style/Signup_Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@id/mbLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/question_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tvSignupLink"
        style="@style/Signup_Link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textAlignment="center"
        android:background="@color/transparent"
        app:layout_constraintTop_toBottomOf="@id/SignupQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/signup_link" />


</androidx.constraintlayout.widget.ConstraintLayout>