<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        app:dividerColor="@color/colors_primary_20"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/experienceTitle"
        style="@style/SectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/experience_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/experienceText"
        style="@style/MultitextBox"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:singleLine="false"
        android:lines="4"
        android:text="@string/experience_multitext" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="24dp"
        app:dividerColor="@color/colors_primary_20"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/formationTitle"
        style="@style/SectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/formation_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/formationText"
        style="@style/MultitextBox"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:singleLine="false"
        android:lines="4"
        android:text="@string/formation_multitext" />


</androidx.appcompat.widget.LinearLayoutCompat>