<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.ui.fragments.SingUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/singUpText"
            style="@style/SingUp_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="237dp"
            android:text="@string/singUp"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userTextLayoutInput"
            style="@style/SingUp_TextInputLayout"
            app:boxStrokeColor="@color/transparent"
            app:boxStrokeWidth="0dp"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="32dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/singUpText"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_sing_up_background"
                android:hint="@string/user_sing_up_string"
                style="@style/SingUp_TextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/userMessengerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/userTextLayoutInput"
            android:text="@string/user_messenger_string"
            style="@style/UserMessengerTextStyle"
            android:visibility="visible"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextLayoutInput"
            style="@style/SingUp_TextInputLayout"
            app:boxStrokeColor="@color/transparent"
            app:boxStrokeWidth="0dp"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="48dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/userTextLayoutInput"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_sing_up_background"
                android:hint="@string/email_sing_up_string"
                style="@style/SingUp_TextInputEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextLayoutInput"
            style="@style/SingUp_TextInputLayout"
            app:boxStrokeColor="@color/transparent"
            app:boxStrokeWidth="0dp"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/emailTextLayoutInput"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_sing_up_background"
                android:hint="@string/password_sing_up_string"
                style="@style/SingUp_TextInputEditText"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordTextLayoutInput"
            style="@style/SingUp_TextInputLayout"
            app:boxStrokeColor="@color/transparent"
            app:boxStrokeWidth="0dp"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="32dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/passwordTextLayoutInput"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_sing_up_background"
                android:hint="@string/confirm_password_sing_up_string"
                style="@style/SingUp_TextInputEditText"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroupSingUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordTextLayoutInput"
            android:layout_marginTop="32dp"
            android:background="@drawable/input_sing_up_background">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_group_text"
                style="@style/SingUp_RadioGroup_Text"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/buttonFirstOption"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/first_option_sing_up_string"
                style="@style/RadioButton_SingUp"
                />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/buttonSecondOption"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/second_option_sing_up_string"
                style="@style/RadioButton_SingUp"
                />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/buttonThirdOption"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/third_option_sing_up_string"
                style="@style/RadioButton_SingUp"
                />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/buttonFourthOption"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/fourth_option_sing_up_string"
                style="@style/RadioButton_SingUp"
                />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otherOptionTextInputLayout"
            style="@style/SingUp_TextInputLayout"
            app:boxStrokeColor="@color/transparent"
            app:boxStrokeWidth="0dp"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="32dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/radioGroupSingUp"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            tools:visibility="visible"
            android:visibility="gone">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otherOptionTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_sing_up_background"
                android:hint="@string/others_option_sing_up_string"
                style="@style/SingUp_TextInputEditText"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/singUpButton"
            android:layout_width="256dp"
            android:layout_height="64dp"
            android:layout_marginTop="88dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_state_color_background"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/otherOptionTextInputLayout"
            style="@style/SingUp_TextButtonDisable_Style"
            android:enabled="false"
            android:text="@string/sing_up_button_string" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/errorEmailSingUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_warning_amber"
            android:drawablePadding="4dp"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/emailTextLayoutInput"
            android:text="@string/error_email_sing_up_string"
            style="@style/TextErrorStyle"
            tools:visibility="visible"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/errorPasswordSingUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_warning_amber"
            android:drawablePadding="4dp"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordTextLayoutInput"
            android:text="@string/error_password_string"
            style="@style/TextErrorStyle"
            tools:visibility="visible"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error_required_genre_sing_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_warning_amber"
            android:drawablePadding="4dp"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/otherOptionTextInputLayout"
            android:text="@string/required_genre_field_string"
            style="@style/TextErrorStyle"
            tools:visibility="visible"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/termsOfUseText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/otherOptionTextInputLayout"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/terms_of_use_sing_up_string" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>