<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colors_primary_20"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/contactContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contactContainerTitle"
            style="@style/SectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/attendance_title" />

        <TextView
            android:id="@+id/telephoneListItem"
            style="@style/Contact_Container_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/telephone_item_text"
            android:drawablePadding="8dp"
            app:drawableStartCompat="@drawable/ic_baseline_phonedrawable" />

        <TextView
            android:id="@+id/whatsappListItem"
            style="@style/Contact_Container_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/telephone_item_text"
            android:drawablePadding="8dp"
            app:drawableStartCompat="@drawable/ic_baseline_whatsappdrawable" />

        <TextView
            android:id="@+id/emailListItem"
            style="@style/Contact_Container_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email_item_text"
            android:drawablePadding="8dp"
            app:drawableStartCompat="@drawable/ic_baseline_mail_outlinedrawable" />

        <TextView
            android:id="@+id/linkedinListItem"
            style="@style/Contact_Container_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/linkedin_item_text"
            android:textColor="@color/colors_primary_300"
            android:drawablePadding="8dp"
            app:drawableStartCompat="@drawable/ic_baseline_linkedin" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>